# TFG

./: Horarios master.xlsx  README.md  Readme bien.docx  minmea.c  test-tfg.xlsx
HLS/normal/: cloud.txt  indices.txt  normal.cpp  normal.h  normal.hpp  normal_tb.cpp  vivado_hls.app
HLS/normal/neighbors/: cloud.txt  covariance_matrix.txt  indices.txt
HLS/normal/solution1/: script.tcl  solution1.aps  (+1 more)
codigo/harris keypoints/: CMakeLists.txt  harris_keypoints.cpp
codigo/narf keypoints/: CMakeLists.txt  narf_keypoints.cpp
codigo/only_sift_keypoints/: CMakeLists.txt  only_sift_keypoints.cpp
codigo/pcl_modded/: feature.hpp  normal_3d.h  normal_3d.hpp  normal_3d_modded_pcl1.7.hpp
codigo/point_clouds/: car6.pcd
codigo/registration/: pairwise_incremental_registration.cpp
codigo/sift keypoints/: CMakeLists.txt  run  sift_keypoints.cpp
codigo/sift_keypoints_bueno/: sift_keypoints.cpp
codigo/sift_keypoints_estimation/: CMakeLists.txt  sift_keypoints_estimation.cpp
codigo/sift_z_keypoints_estimation/: CMakeLists.txt  sift_z_keypoints_estimation.cpp
codigo/visualization/: CMakeLists.txt  visualization.cpp
codigo/visualization_all/: visualization.cpp
codigo/visualization_sift/: CMakeLists.txt  visualization.cpp
coremarine/: example.c  minmea.h
memoria/: objetivos.docx
memoria/LaTeX/: Estructura libro.tfg.aux  Estructura libro.tfg.out  Estructura libro.tfg.toc  archivo.aux  bibliograf+�a.tex  bibliografía.tex  capitulo2_pcl-objetivos-herramientas.tex  capitulo3_visualizacion-extraccionSIFT.tex  capitulo4_medicion_tiempos.tex  capitulo5_extraccionNormales.tex  capitulo6_optimizacion.tex  capitulo7_finale.tex  capitulo_introductorio.tex  memoria.aux  memoria.blg  memoria.out  memoria.tex  memoria.tex.aux  memoria.toc  referencias.tex
memoria/documentación PCL - FPGA/: test-tfg.xlsx
(+44 files in other folders)
